--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -82,6 +82,7 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  margin-bottom: 1rem;
 }
 
 .article-template__link .icon-wrap {
@@ -189,7 +190,7 @@ h1.article-template__title {
 
 .article-template__content figcaption {
   font-size: 14px;
-  color: #ddd;
+  margin-top: 1rem;
   font-style: italic;
 }
 
@@ -254,4 +255,23 @@ h1.article-template__title {
   color: #fff;
   line-height: 1.3;
   margin-bottom: 3rem !important;
+}
+.article-author {
+  background: #c67a26;
+  color: #fff;
+}
+.author-bio img {
+  max-width: 100%;
+}
+
+.author-bio {
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+}
+
+@media (max-width: 425px) {
+  .author-bio {
+    display: block;
+  }
 }
