--- a/assets/dark.css
+++ b/assets/dark.css
@@ -265,3 +265,21 @@
 .dark .site-header-home .navBG.sticky {
   background: #000;
 }
+
+
+.dark .tag-header {
+  background: #2a2727
+}
+
+.dark .header-blog h1 {
+  color: #fff;
+}
+
+.dark .article-template__content a {
+  color: #c67a26 !important;
+}
+
+.dark .article-template__content a:hover {
+  text-decoration: underline !important;
+  color: #c67a26 !important;
+}
