final blog menu edits

--- a/snippets/blog-nav.liquid
+++ b/snippets/blog-nav.liquid
@@ -1,4 +1,4 @@
-<div class="navbar-inner stickyBG">
+<div class="navbar-inner blog-nav">
   <div class="container">
 
     <div class="navbar-center-wrapper">
@@ -8,7 +8,7 @@
             <a title="Blog Home" href="/blogs/the-wavelength/">Blog Home</a>
           </li>
           <li id="mgt-menu-item-612" class="menu-item menu-item-type-taxonomy menu-item-object-category">
-            <a title="Sauna Science" href="/blogs/the-wavelength/tagged/sauna-science/">Sauna Science</a>
+            <a title="Science" href="/blogs/the-wavelength/tagged/science/">Science</a>
           </li>
           <li id="mgt-menu-item-472" class="menu-item menu-item-type-taxonomy menu-item-object-category">
             <a title="Products" href="/blogs/the-wavelength/tagged/products/">Products</a>
@@ -23,36 +23,6 @@
 </div>
 
 
-<header role="banner" class="banner">
-  <nav class="nav" role="navigation">
-    <ul class="nav__list">
-      <li>
-        <input
-          id="group-1"
-          type="checkbox"
-          hidden />
-        <label for="group-1">
-          <span class="fa fa-angle-right"></span>Blog Menu</label>
-        <ul class="group-list">
-          <li>
-            <a title="Blog Home" href="/blogs/the-wavelength/">Blog Home</a>
-          </li>
-          <li>
-            <a title="Sauna Science" href="/blogs/the-wavelength/tagged/sauna-science/">Sauna Science</a>
-          </li>
-          <li>
-            <a title="Products" href="/blogs/the-wavelength/tagged/products/">Products</a>
-          </li>
-          <li>
-            <a title="Lifestyle" href="/blogs/the-wavelength/tagged/lifestyle/">Lifestyle</a>
-          </li>
-        </ul>
-      </li>
-
-    </ul>
-  </nav>
-</header>
-
 <style>
   @media(min-width: 991px) {
     header.banner {
@@ -64,8 +34,26 @@
     .navbar-inner {
       display: none;
     }
+
+    .blog-nav ul li {
+      display: inline-block;
+      padding: 10px;
+    }
+    .blog-nav .container {
+      width: 100% !important;
+    }
   }
 
+  @media(max-width: 768px) {
+    .blog-nav ul li {
+      display: inline-block;
+      padding: 8px 0;
+    }
+    .blog-nav ul li a {
+      padding: 2px 7px;
+      font-size: 13px;
+    }
+  }
   /**
  * Hidden fallback
  */
@@ -91,6 +79,7 @@
   header.banner nav ul {
     text-align: center;
   }
+
   /**
  * Styling top level items
  */
@@ -165,16 +154,21 @@
 
 <script>
 
+  // Cache elements for performance
+  const mainHeader = document.getElementById('shopify-section-header');
+  const subMenu = document.getElementsByClassName('blog-nav');
 
-  setInterval(function() {
-    if ($('#ju_Con_837251').css('display') == 'block' && !$('.navBG').hasClass("sticky")) {
-      $('.stickyBG').css('transform', 'translateY(-252px)');
-    } else if ($('#ju_Con_837251').css('display') == 'block') {
-      $('main#MainContent.sticky .stickyBG.stickyBG-visible').css('transform', 'translateY(102px)');
-    } else if (!$('.navBG').hasClass("sticky")) {
-      $('.stickyBG').css('transform', 'translateY(-252px)');
-    } else if ($('.navBG').hasClass("sticky")) {
-      $('.stickyBG').css('transform', 'translateY(62px)');
-    }
-  }, 1000);
+  // Function to update sub-menu position
+  function updateSubMenuPosition() {
+    const mainHeaderHeight = mainHeader.offsetHeight;
+
+    // Update sub-menu top position
+    subMenu.style.top = `${mainHeaderHeight}px`;
+  }
+
+  // Attach scroll event
+  window.addEventListener('scroll', updateSubMenuPosition);
+
+  // Initial position update
+  updateSubMenuPosition();
 </script>
