--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -20,7 +20,6 @@
   }
 {%- endstyle -%}
 
-{%- render 'blog-nav' -%}
 
 <div class="header-blog">
 
@@ -33,7 +32,7 @@
     <div class="tag-header-main">
       <p>Brian Richards Presents:</p>
       <h1>The Wavelength</h1>
-      <p>Powered by SaunaSpace</p>
+      <p class="blog-description">Our founder's blog. Ruminations about sauna, light, electromagnetism, wellness and the inner pharmacy of the human being.</p>
     </div>
   {% endif %}
 
