--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -43,7 +43,7 @@
 
 .card .card__inner .card__media {
   overflow: hidden;
-  width: 100%:
+  width: 100%;
   /* Fix for Safari border bug on hover */
   z-index: 0;
   border-radius: calc(var(--card-corner-radius) - var(--card-border-width) - var(--card-image-padding));
