--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -33,6 +33,12 @@
 				</div>
 			</div>
 			<div class="footer-links">
+              <div class="fl-top">
+					<div class="footer-head">Brighten up your inbox. <span>Get the latest promotions and news.</span></div>
+					<div class="fl-signup">
+						<div class="klaviyo-form-WHMj9M"></div>
+					</div>
+				</div>
 				<div class="fl-cols">
 					<div class="fl-col">
 						<div class="fl-head">Shop</div>
@@ -52,7 +58,7 @@
 						<a href="/pages/how-to-use-a-sauna">Using Your Sauna</a>
 						<a href="/pages/full-spectrum-infrared-sauna-health-benefits">Health Benefits</a>
 						<a href="/pages/what-are-electromagnetic-fields-emfs">What are EMFs?</a>
-						<a href="/pages/infrared-sauna-light-therapy-research">Research</a>
+						<a href="/blogs/infrared-sauna-light-therapy-research">Research</a>
 						<a href="/pages/reviews">Reviews</a>
 					</div>
 					<div class="fl-col">
