--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -443,7 +443,7 @@
       </ul>
       <div>
         <a
-          href="https://blog.sauna.space/cellulite-reduction-with-near-infrared-nir-sauna-use/"
+          href="/blogs/the-wavelength/cellulite-reduction-with-near-infrared-nir-sauna-use"
           class="nav-learn-article"
           target="_blank"
         >
@@ -465,7 +465,7 @@
           ></span>
         </a>
         <a
-          href="/blogs/wavelength"
+          href="/blogs/the-wavelength"
           class="nav-learn-blog"
           target="_blank"
           >See all blog articles</a
