--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -465,19 +465,9 @@ window.TriplePixelData={TripleName:"saunaspace.myshopify.com",ver:"1.9.0"},funct
     ></script>
     {% endif %}
 
-  <script src="//app.shippingratescalculator.com/js/core/main.min.js?timestamp=1689801771&shop=saunaspace.myshopify.com" defer></script>
+  <script src="//shipping-rates-calculator.incubate.dev/js/core/main.min.js?timestamp=1696588397&shop=saunaspace.myshopify.com" defer></script>
 
-  
-
-  
-
-  
-
-  
-
-  
-
-    <script>
+<script>
         {% if product %}
         var _learnq = _learnq || [];
       function addedToCart() {
