--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -239,12 +239,12 @@ window.TriplePixelData={TripleName:"saunaspace.myshopify.com",ver:"1.9.0"},funct
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
     {{ 'yotpo.css' | asset_url | stylesheet_tag }}
-    {%- unless settings.type_body_font.system? -%}
+    {% comment %} {%- unless settings.type_body_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
     {%- endunless -%}
     {%- unless settings.type_header_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_header_font | font_url }}" type="font/woff2" crossorigin>
-    {%- endunless -%}
+    {%- endunless -%} {% endcomment %}
 
     {%- if settings.predictive_search_enabled -%}
       <link rel="stylesheet" href="{{ 'component-predictive-search.css' | asset_url }}" media="print" onload="this.media='all'">
