text hightlight fix on light mode

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -238,7 +238,7 @@ window.TriplePixelData={TripleName:"saunaspace.myshopify.com",ver:"1.9.0"},funct
     {% endstyle %}
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
-    {{ 'yotpo.css' | asset_url | stylesheet_tag }}
+    {{ 'okendo.css' | asset_url |  stylesheet_tag }}
     {% comment %} {%- unless settings.type_body_font.system? -%}
       <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
     {%- endunless -%}
