--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -117,7 +117,18 @@
 		<span class="bcpo-cart-file">Uploaded file</span>
 	{% endif %}
 {% else %}
+	
+{% if property.last contains '/uploads/' %}
+	{% assign file_type = property.last | split: '.' | last | downcase %}
+	{% assign file_types = 'jpg,jpeg,webp,gif,png,apng,avif,svg,bmp,ico,tiff' | split: ',' %}
+	{% if file_types contains file_type %}
+		<div class="bcpo-cart-file"><img src="{{ property.last }}" style="max-width: 50px; height: auto;"></div>
+	{% else %}
+		<span class="bcpo-cart-file">Uploaded file</span>
+	{% endif %}
+{% else %}
 	{{ property.last }}
+{% endif %}
 {% endif %}
 {% endif %}
 " class="link" target="_blank">
