--- a/sections/targeted-page.liquid
+++ b/sections/targeted-page.liquid
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="side-by-side sbs-reverse">
-			<div class="sbs-img"><img src="{{ 'targeted-therapy-desk-arm.jpg' | asset_url }}" alt="" loading="lazy" /></div>
+			<div class="sbs-img"><img src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/PhotonDeskArm-Front1_1.jpg?v=1698676529" alt="Photon Desk Arm" loading="lazy" /></div>
 			<div class="sbs-text">
 				<cms id='cms2'>
 				<h2>Beat Screen Fatigue</h2>
