--- a/snippets/card-product-simple.liquid
+++ b/snippets/card-product-simple.liquid
@@ -140,6 +140,8 @@
       <div
         class="card__content">
         <div class="card__information">
+          {% render 'okendo-reviews-product-rating-summary', product: card_product %}
+
           {% comment %}
             <h3 class="card__heading{% if card_product.featured_media or settings.card_style == 'standard' %} h5{% endif %}">
             <a href="{{ card_product.url }}" class="full-unstyled-link">
@@ -147,36 +149,6 @@
             </a>
             </h3>
           {% endcomment %}
-          {% if product.metafields.yotpo.reviews_count and product.metafields.yotpo.reviews_count != "0" %}
-
-            <div
-              class="yotpo bottomLine"
-              data-appkey="YwrSTIBwLO68MpdRmYQmA8PmhOpotElM91q2CYv3"
-              data-domain="{{shop.permanent_domain | escape }}"
-              data-product-id="{{ product.id }}"
-              data-product-models="{{ product.id }}"
-              data-name="{{ product.title | escape }}"
-              data-url="{{ shop.url }}{{ product.url }}"
-              data-image-url="{{ product.featured_image | product_img_url: 'large' |replace: '?', '%3F' | replace: '&','%26'}}"
-              data-description="{{ product.description | escape }}"
-              data-bread-crumbs="{% for tag in product.tags %}{{ tag | escape }};{% endfor %}">
-              {%- assign yotpo_offload_content = shop.metafields.yotpo.yotpo_offload_content %}
-              {%- assign time_now = 'now' | date: '%s' %}
-              {%- assign yotpo_live_time = shop.metafields.yotpo.yotpo_live | date: '%s' %}
-              {%- assign diff_seconds_from_live = time_now | minus: yotpo_live_time %}
-              {%- assign yotpo_bottomline_last_updated = product.metafields.yotpo.bottomline_update_time | date: '%s' %}
-              {%- assign diff_seconds_from_last_bottomline_update = time_now | minus: yotpo_bottomline_last_updated %}
-              {%- if yotpo_live_time and diff_seconds_from_live < 86400 or yotpo_bottomline_last_updated and diff_seconds_from_last_bottomline_update < 86400 -%}
-                {%- assign yotpo_bottomline_obsolete = false %}
-              {%- else %}
-                {%- assign yotpo_bottomline_obsolete = true %}
-              {%- endif %}
-              {%- if yotpo_offload_content == 'yes' and yotpo_bottomline_obsolete != true -%}
-                {{ product.metafields.yotpo.bottomline }}
-              {%- endif %}
-
-            </div>
-          {%- endif %}
 
           {%- if affiliate_id != null -%}
           <a
