--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -555,6 +555,8 @@
             {%- assign eligible_for_returns = product.metafields.my_fields.not_eligible_for_return -%}
             {%- assign thirty_day_returns = product.metafields.my_fields.thirty_day_returns -%}
             {%- assign custom_warranty = product.metafields.my_fields.custom_warranty -%}
+            {%- assign hundred_night_trial = product.metafields.custom.one_hundred_night_trial -%}
+            
             
             <div class="warranty-trial">
               <div class="pwt product-warranty">
@@ -566,11 +568,12 @@
                 </div>
                 <div class="pw">
                   {% if eligible_for_returns == true %}
-                    Not Eligible for Return
+                    <div class="pwt product-trial">Not Eligible for Return</div>
                   {% endif %}
                   {% if thirty_day_returns == true %}
-                  <div class="pwt product-trial">30-day Trial</div>
-                  {% else %}
+                    <div class="pwt product-trial">30-day Trial</div>
+                  {% endif %}
+                  {% if hundred_night_trial == true or hundred_night_trial == '' %}
                     <div class="pwt product-trial">100-day Trial</div>
                   {% endif %}
                 </div>
@@ -1078,24 +1081,24 @@ function bcpoChange(currentVariant) {
           "url" : {{ request.origin | append: variant.url | json }}
         }{% unless forloop.last %},{% endunless %}
       {%- endfor -%}
-    ]
+    ] 
     {% if product.metafields.okendo.summaryData.reviewCount > 0 %}
-    ,"aggregateRating": {
-      "@type": "AggregateRating",
-      "description": "Okendo Reviews",
-      "ratingValue": "{{ product.metafields.okendo.summaryData.reviewAverageValue }}",
-      "ratingCount": "{{ product.metafields.okendo.summaryData.reviewCount }}"
-    }
-    {% elsif product.metafields.okendo.ReviewCount > 0 %}
-    ,"aggregateRating": {
-      "@type": "AggregateRating",
-      "description": "Okendo Reviews",
-      "ratingValue": "{{ product.metafields.okendo.ReviewAverageValue }}",
-      "ratingCount": "{{ product.metafields.okendo.ReviewCount }}"
-    }
-    {% endif %}
+      ,"aggregateRating": {
+        "@type": "AggregateRating",
+        "description": "Okendo Reviews",
+        "ratingValue": "{{ product.metafields.okendo.summaryData.reviewAverageValue }}",
+        "ratingCount": "{{ product.metafields.okendo.summaryData.reviewCount }}"
+      }
+      {% elsif product.metafields.okendo.ReviewCount > 0 %}
+      ,"aggregateRating": {
+        "@type": "AggregateRating",
+        "description": "Okendo Reviews",
+        "ratingValue": "{{ product.metafields.okendo.ReviewAverageValue }}",
+        "ratingCount": "{{ product.metafields.okendo.ReviewCount }}"
+      }
+      {% endif %}
   }
-</script>
+  </script>
 
 {% schema %}
 {
